plugins {
    id 'java'
}

group = 'de.daver.beyondplan'
version = '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}

dependencies {
    testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.8.1'
    testRuntimeOnly group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: '5.8.1'
    implementation group: 'org.xerial', name: 'sqlite-jdbc', version: '3.45.2.0'
    implementation group: 'com.mysql', name: 'mysql-connector-j', version: '8.3.0'
}

tasks.withType(JavaCompile) {
    options.compilerArgs += "--enable-preview";
    sourceCompatibility = JavaVersion.VERSION_21
    targetCompatibility = JavaVersion.VERSION_21
}

test {
    useJUnitPlatform()
    jvmArgs += "--enable-preview"
}